adjust the height of the pizzas on the menu

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <h1 class="my-4" style="text-align: center; font-size: 3em;">OU<span class="underline">R ME</span>NU</h1>
         <div class="row ps-4">
             <div class="card m-3" style="width: 25rem;">
-                <img src="images/pepperoni.jpg" class="card-img-top" alt="...">
+                <img src="images/pepperoni.jpg" class="card-img-top" alt="..." height="240">
                 <div class="card-body" style="text-align: center;">
                     <h2 style="color: black; text-align: center;" class="card-title">Pepperoni pizza</h2>
                     <p style="color: black;" class="card-text"> succulent bbq chicken , beef peperoni, mushroom, green
@@ -68,7 +68,7 @@
             </div>
 
             <div class="card m-3" style="width: 25rem;">
-                <img src="images/boerewors.png" class="card-img-top" alt="...">
+                <img src="images/boerewors.png" class="card-img-top" alt="..." height="240">
                 <div class="card-body" style="text-align: center;">
                     <h2 style="color: black; text-align: center;" class="card-title">Boerewors pizza</h2>
                     <p style="color: black;" class="card-text"> 100% beef mince , fresh tomatoes , fresh onions
@@ -116,7 +116,7 @@
             </div>
 
             <div class="card m-3" style="width: 25rem;">
-                <img src="images/buratta.jpg" class="card-img-top" alt="...">
+                <img src="images/buratta.jpg" class="card-img-top" alt="..." height="250">
                 <div class="card-body" style="text-align: center;">
                     <h2 style="color: black; text-align: center;" class="card-title">Buratta pizza</h2>
                     <p style="color: black;" class="card-text"> Whole wheat pizza , pesto sauce, burrata cheese , cherry
@@ -126,7 +126,7 @@
             </div>
 
             <div class="card m-3 " style="width: 25rem;">
-                <img src="images/hawaiian.jpg" class="card-img-top" alt="...">
+                <img src="images/hawaiian.jpg" class="card-img-top" alt="..." height="250">
                 <div class="card-body" style="text-align: center;">
                     <h2 style="color: black; text-align: center;" class="card-title">Hawaiian pizza</h2>
                     <p style="color: black;" class="card-text"> macon , pineapple, ham , canadian bacon, pizza crust ,
