specify the  prices of each item

--- a/pepperoni.html
+++ b/pepperoni.html
@@ -71,14 +71,14 @@
 
                 </select> -->
                 <p>Choose toppings of your choice</p>
-                <input type="radio" id="" name="sausage">
+                <input type="radio" id="sausage" name="sausage">
                 <label for="deliverr">Sausage for small pizza @Ksh. 50</label><br>
-                <input type="radio" id="" name="mushroom" value="">
+                <input type="radio" id="mushroom" name="mushroom" value="">
                 <label for="deliverr">Mushroom for small pizza @Ksh. 50</label><br>
-                <input type="radio" id="" name="gorgo" value="">
+                <input type="radio" id="gorgonzola" name="gorgo" value="">
                 <label for="deliverr">Gorgonzola for small pizza @Ksh. 50</label><br>
-                <input type="radio" id="" name="sausage1">
-                <label for="deliverr">Sausage for medium pizza @Ksh. 100</label><br>
+                <!-- <input type="radio" id="" name="sausage1"> -->
+                <!-- <label for="deliverr">Sausage for medium pizza @Ksh. 100</label><br>
                 <input type="radio" id="" name="mushroom1">
                 <label for="deliverr">Mushroom for medium pizza @Ksh. 100</label><br>
                 <input type="radio" id="" name="gorgo1">
@@ -88,7 +88,7 @@
                 <input type="radio" id="" name="mushroom2">
                 <label for="deliverr">Mushroom for large pizza @Ksh. 150</label><br>
                 <input type="radio" id="" name="gorgo2">
-                <label for="deliverr">Gorgonzola for large pizza @Ksh. 150</label><br>
+                <label for="deliverr">Gorgonzola for large pizza @Ksh. 150</label><br> -->
             </div>
             <div class="my-3" id="number" style="color: white;">
 
@@ -111,7 +111,7 @@
 
     </div>
 
-    <div class="card" style="width:auto rem; height: 10rem;">
+    <!-- <div class="card" style="width:auto rem; height: 10rem;">
         <div class="col-sm-12">
             <table class="table" style="font-size: 1rem;">
                 <thead>
@@ -138,7 +138,7 @@
                 </tbody>
             </table><br><br>
         </div>
-    </div>
+    </div> -->
 
     <button type="submit" class="btn btn-danger my-3 " id="buttn" >Complete order</button>
 
