add the delivery charges

--- a/pepperoni.html
+++ b/pepperoni.html
@@ -71,11 +71,11 @@
 
                 </select> -->
                 <p>Choose toppings of your choice</p>
-                <input type="radio" id="sausage" name="sausage">
+                <input type="radio" class="toppps" value="sausage">
                 <label for="deliverr">Sausage for small pizza @Ksh. 50</label><br>
-                <input type="radio" id="mushroom" name="mushroom" value="">
+                <input type="radio" class="toppps" value="mushroom" value="">
                 <label for="deliverr">Mushroom for small pizza @Ksh. 50</label><br>
-                <input type="radio" id="gorgonzola" name="gorgo" value="">
+                <input type="radio" class="toppps" value="gorgonzola">
                 <label for="deliverr">Gorgonzola for small pizza @Ksh. 50</label><br>
                 <!-- <input type="radio" id="" name="sausage1"> -->
                 <!-- <label for="deliverr">Sausage for medium pizza @Ksh. 100</label><br>
@@ -93,14 +93,14 @@
             <div class="my-3" id="number" style="color: white;">
 
                 <label>Number of pizzas</label>
-                <input type="number" min="1" max="100">
+                <input type="number" id="qty" min="1" max="100">
             </div>
             <div style="color: white;">
                 <p>Would you like your pizza to be delivered?</p>
-                <input type="radio" id="deliver" name="delivery" value="" onclick="fcn()">
+                <input type="radio" id="deliver" name="delivery" value="" >
                 <label for="deliverr">Yes</label><br>
-                <input type="radio" id="" name="delivery" value="">
-                <label for="deliverr">No</label><br><br>
+                <!-- <input type="radio" id="" name="delivery" value="">
+                <label for="deliverr">No</label><br><br> -->
             </div>
 
 
