change h2 color to black

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="card-body" style="text-align: center;">
                     <h2 style="color: black; text-align: center;" class="card-title">Pepperoni pizza</h2>
                     <p style="color: black;" class="card-text"> succulent bbq chicken , beef peperoni, mushroom, green
-                        pepper.</p>
+                        pepper</p>
                     <a href="pepperoni.html" class="btn btn-danger" target="_blank">Order Now</a>
                 </div>
             </div>
